--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -60,7 +60,7 @@
 			try
 			{
 				urlParams = JSON.parse(decodeURIComponent(window.location.hash.substring(2)));
-				
+				console.log(window.location.hash.substring(2))
 				if (urlParams.hash != null)
 				{
 					window.location.hash = urlParams.hash;
@@ -77,6 +77,7 @@
 							navigator.userAgent.indexOf(' draw.io/') > -1;
 
 		// Redirects page if required
+		urlParams['dev'] = '1'
 		if (urlParams['dev'] != '1')
 		{
 			(function()
